@@ -2,7 +2,7 @@ package com.meterware.httpunit;
 /********************************************************************************************************************
 * $Id$
 *
-* Copyright (c) 2000-2003, Russell Gold
+* Copyright (c) 2000-2004, Russell Gold
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
 * documentation files (the "Software"), to deal in the Software without restriction, including without limitation
@@ -668,7 +668,8 @@ public class WebResponse implements HTMLSegment, CookieSource {
 
 
         public String getName() {
-            return getFrameName().equals( WebRequest.TOP_FRAME ) ? _window.getName() : getFrameName();
+            String windowName = getFrameName().equals( WebRequest.TOP_FRAME ) ? _window.getName() : getFrameName();
+            return windowName.startsWith( WebWindow.NO_NAME ) ? "" : windowName;
         }
 
 
